Bug 765180 - Fix an overzealous assert. r=dvander